fixed the open hamburger menu shifting issue

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -12,6 +12,8 @@
          > span:last-child {
             transform: rotate(-45deg);
          }
+         // margin-right: 30px;
+         right: 50px;
       }
       .header__mobileNav {
          visibility: visible;
